Mise en place du head

--- a/cv.html
+++ b/cv.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Simon RIVIERE</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
 
 </body>
