--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 
-<body>
+<body >
 
 
-<div>
+<nav>
+	<img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" class="imgId">
 	<article>
 		<h1>Contact</h1>
 
@@ -37,14 +38,17 @@
 	<article>
 		<h1> Loisirs </h1>
 	</article>
-</div>
+</nav>
 
-<header>
+<div id = "conteneur">
+
+<header class="titre">
 	<h1> simon rivière </h1>
 	<h2> Développeur web </h2>
 </header>
 
-<section>
+
+<section class="formation">
 	<h1> formation</h1>
 	<ul>
 		<li>2000 <span class="description">Machin</span></li>
@@ -52,7 +56,7 @@
 	</ul>
 </section>
 
-<section>
+<section class="experience">
 	<h1> expérience professionelle</h1>
 	<ul>
 		<li>2000 <span class="description">Machin</span></li>
@@ -60,7 +64,7 @@
 	</ul>
 </section>
 
-<section>
+<section class="recommandation">
 	<h1> recommandation</h1>
 	<ul>
 		<li>2000 <span class="description">Machin</span></li>
