maj général de la mise en page en fonction de la maquette

--- a/index.html
+++ b/index.html
@@ -8,69 +8,70 @@
 
 <body >
 
-
-<nav>
-	<img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" class="imgId">
-	<article>
-		<h1>Contact</h1>
-
-			<h3>Adresse</h3>
-			<p>Mirepoix, France</p>
-
-			<h3> Téléphone </h3>
-			<p>06 </p>
-
-			<h3>Email</h3>
-			<p></p>
-
-			<h3>Site Web</h3>
-			<p>	</p>
-
-			<h3>Linkedin</h3>
-			<p></p>
-	</article>
-
-	<article>
-		<h1> À propos de moi </h1>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.
-	</article>
-	
-	<article>
-		<h1> Loisirs </h1>
-	</article>
-</nav>
-
 <div id = "conteneur">
+	<nav class = "gauche">
+		<img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" class="imgId">
+		<article>
+			<h1>Contact</h1>
 
-<header class="titre">
-	<h1> simon rivière </h1>
-	<h2> Développeur web </h2>
-</header>
+				<h3>Adresse</h3>
+				<p>Mirepoix, France</p>
+
+				<h3> Téléphone </h3>
+				<p>06 </p>
+
+				<h3>Email</h3>
+				<p></p>
+
+				<h3>Site Web</h3>
+				<p>	</p>
+
+				<h3>Linkedin</h3>
+				<p></p>
+		</article>
+
+		<article>
+			<h1> À propos de moi </h1>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.
+		</article>
+		
+		<article>
+			<h1> Loisirs </h1>
+		</article>
+	</nav>
+
+	<div id="droite">
+		<header class="titre">
+			<h1> simon rivière </h1>
+			<h2> Développeur web </h2>
+		</header>
 
 
-<section class="formation">
-	<h1> formation</h1>
-	<ul>
-		<li>2000 <span class="description">Machin</span></li>
-		<li>1992 naissance </li>
-	</ul>
-</section>
+		<section class="formation">
+			<h1> formation</h1>
+			<ul>
+				<li>2000 <span class="description">Machin</span></li>
+				<li>1992 naissance </li>
+			</ul>
+		</section>
 
-<section class="experience">
-	<h1> expérience professionelle</h1>
-	<ul>
-		<li>2000 <span class="description">Machin</span></li>
-		<li>1992 naissance </li>
-	</ul>
-</section>
+		<section class="experience">
+			<h1> expérience professionelle</h1>
+			<ul>
+				<li>2000 <span class="description">Machin</span></li>
+				<li>1992 naissance </li>
+			</ul>
+		</section>
 
-<section class="recommandation">
-	<h1> recommandation</h1>
-	<ul>
-		<li>2000 <span class="description">Machin</span></li>
-		<li>1992 naissance </li>
-	</ul>
-</section>
+		<section class="recommandation">
+			<h1> recommandation</h1>
+			<ul>
+				<li>2000 <span class="description">Machin</span></li>
+				<li>1992 naissance </li>
+			</ul>
+		</section>
+	</div>
+</div>
 
 </body>
 </html>
