Mise en place des puces rondes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title>Simon RIVIERE</title>
     <link rel="stylesheet" href="style.css"/>
+    <script src="https://kit.fontawesome.com/81fac7a661.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body >
@@ -50,16 +52,16 @@
 		<section class="formation">
 			<h1> formation</h1>
 			<ul>
-				<li>2000 <span class="description">Machin</span></li>
-				<li>1992 naissance </li>
+				<li> <i class="far fa-dot-circle"></i> 2000  <span class="description">Machin</span></li>
+				<li> <i class="fas fa-circle"></i>1992 naissance </li>
 			</ul>
 		</section>
 
 		<section class="experience">
 			<h1> expérience professionelle</h1>
-			<ul>
-				<li>2000 <span class="description">Machin</span></li>
-				<li>1992 naissance </li>
+		<ul>
+				<li> <i class="far fa-dot-circle"></i> 2000  <span class="description">Machin</span></li>
+				<li> <i class="fas fa-circle"></i> 1992 naissance </li>
 			</ul>
 		</section>
 
