changement d'id en class

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</article>
 	</nav>
 
-	<div id="droite">
+	<div class="droite">
 		<header class="titre">
 			<h1> simon rivière </h1>
 			<h2> Développeur web </h2>
