--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 		<section class="formation">
-			<h1> formation</h1>
+			<h1> <i class="fas fa-graduation-cap"></i>formation</h1>
 			<ul>
 				<li> <i class="far fa-dot-circle"></i> 2000  <span class="description">Machin</span></li>
 				<li> <i class="fas fa-circle"></i>1992 naissance </li>
@@ -59,7 +59,7 @@
 		</section>
 
 		<section class="experience">
-			<h1> expérience professionelle</h1>
+			<h1><i class="fas fa-suitcase-rolling"></i> expérience professionelle</h1>
 		<ul>
 				<li> <i class="far fa-dot-circle"></i> 2000  <span class="description">Machin</span></li>
 				<li> <i class="fas fa-circle"></i> 1992 naissance </li>
@@ -67,7 +67,7 @@
 		</section>
 
 		<section class="recommandation">
-			<h1> recommandation</h1>
+			<h1> <i class="fas fa-pencil-alt"></i> recommandation</h1>
 			<ul>
 				<li>2000 <span class="description">Machin</span></li>
 				<li>1992 naissance </li>
