modification du width du body et de nav

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 		
 		<article>
 			<h1> Loisirs </h1>
+			<ul id="loisir">
+				<li><i class="fas fa-hiking"></i></li>
+			</ul>
 		</article>
 	</nav>
 
