Changement des polices/ajustement margin-padding

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Simon RIVIERE</title>
     <link rel="stylesheet" href="style.css"/>
     <script src="https://kit.fontawesome.com/81fac7a661.js" crossorigin="anonymous"></script>
-
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=DM+Mono:ital,wght@1,300&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body >
@@ -50,8 +50,8 @@
 	<div class="droite">
 		
 		<header class="titre">
-			<h1> simon rivière </h1>
-			<h2> Développeur web </h2>
+			<h1><span class="prenom"> simon </span> rivière </h1>
+			<h2><span class="devel"> Dével</span>oppeur web </h2>
 		</header>
 
 
