rajout du contenu dans contact

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 				<p>Mirepoix, France</p>
 
 				<h3> Téléphone </h3>
-				<p>06 </p>
+				<p>06.00.00.00.00 </p>
 
 				<h3>Email</h3>
-				<p></p>
+				<p><a href="mailto:riviere.simon@me.com">riviere.simon@me.com</a> </p>
 
 				<h3>Site Web</h3>
-				<p>	</p>
+				<p><a href="https://github.com/simonriviere">Github</a></p>
 
-				<h3>Linkedin</h3>
-				<p></p>
+				<p><a href="https://linkedin.com/in/simon-riviere-4825981a6">Linkedin</a> </p>
+
 		</article>
 
 		<article>
@@ -58,7 +58,14 @@
 		<section class="formation">
 			<h1> <i class="fas fa-graduation-cap"></i>formation</h1>
 			<ul>
-				<li> <i class="far fa-dot-circle"></i> 2000  <span class="description">Machin</span></li>
+				<li> <i class="far fa-dot-circle"></i> 2020  <span class="description">Formation Openclassrooms <br/>
+							<ul>
+								<li>Html</li>
+								<li>Css</li>
+								<li>Javascript</li>
+								<li>nodeJs</li>
+							</ul>
+					</span></li>
 				<li> <span class="point"><i  class="fas fa-circle"></i> </span>1992 naissance </li>
 			</ul>
 		</section>
