modification de la mise en page des icones loisirs

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 			<ul>
 				<li> <i class="far fa-dot-circle"></i> 2020  <span class="description">Formation Openclassrooms <br/>
 							<ul>
-								<li>Html</li>
-								<li>Css</li>
-								<li>Javascript</li>
-								<li>nodeJs</li>
+								<li>- Html</li>
+								<li>- Css</li>
+								<li>- Javascript</li>
+								<li>- nodeJs</li>
 							</ul>
 					</span></li>
 				<li> <span class="point"><i  class="fas fa-circle"></i> </span>1992 naissance </li>
