création d'un table pour la mise en page de la partie formation

--- a/index.html
+++ b/index.html
@@ -55,19 +55,31 @@
 		</header>
 
 
-		<section class="formation">
-			<h2> <i class="fas fa-graduation-cap"></i>formation</h2>
-			<ul>
-				<li> <i class="far fa-dot-circle"></i> 2020  <span class="description">Formation Openclassrooms <br/>
-							<ul>
-								<li>- Html</li>
-								<li>- Css</li>
-								<li>- Javascript</li>
-								<li>- nodeJs</li>
-							</ul>
-					</span></li>
-				<li> <span class="point"><i  class="fas fa-circle"></i> </span>1992 naissance </li>
-			</ul>
+		<section>
+			<h2 > <i class="fas fa-graduation-cap"></i>formation</h2>
+			
+			<table>
+				
+				<tr>
+					<td class="td1"><i class="far fa-dot-circle"></i> 2020 </td>
+					<td class="td2">Formation Openclassrooms : </td>
+				</tr>		
+				<tr>
+					<td class="td1"></td>
+					<td class="td2"><ul>
+						<li>exemple 1</li>
+						<li>exemple 2</li>
+					</ul></td>
+				</tr>
+
+				<tr>
+					<td class="td1"><i class="fas fa-circle"></i>2011-2013</td>
+					<td class="td2">BTS Électrotechnique</td>
+				</tr>
+			</table>
+		
+
+		
 		</section>
 
 		<section class="experience">
