correction de bug

--- a/index.html
+++ b/index.html
@@ -65,21 +65,19 @@
 					<td class="td2">Formation Openclassrooms : </td>
 				</tr>		
 				<tr>
-					<td class="td1"></td>
-					<td class="td2"><ul>
-						<li>exemple 1</li>
-						<li>exemple 2</li>
-					</ul></td>
+					<td class="td3">Mirepoix</td>
+					<td class="td4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, </td>
 				</tr>
 
 				<tr>
 					<td class="td1"><i class="fas fa-circle"></i>2011-2013</td>
 					<td class="td2">BTS Électrotechnique</td>
 				</tr>
+				<tr>
+					<td class="td5">Toulouse</td>
+					<td class="td4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, </td>
+				</tr>
 			</table>
-		
-
-		
 		</section>
 
 		<section class="experience">
@@ -97,6 +95,7 @@
 				<li>1992 naissance </li>
 			</ul>
 		</section>
+		
 	
 </div>
 </div>
