Remplacement de nav par aside

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body >
 
 <div id = "conteneur">
-	<nav class = "gauche">
+	<aside class = "gauche">
 		<img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" class="imgId">
 		<article>
 			<h2>Contact</h2>
@@ -45,7 +45,8 @@
 				<li><i class="fas fa-campground"></i></li>
 			</ul>
 		</article>
-	</nav>
+		
+	</aside>
 
 	<div class="droite">
 		
