--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id = "conteneur">
 	<aside class = "gauche">
 		<img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" class="imgId">
-		<article>
+		<section>
 			<h2>Contact</h2>
 
 				<h3>Adresse</h3>
@@ -30,22 +30,22 @@
 
 				<p><a href="https://linkedin.com/in/simon-riviere-4825981a6">Linkedin</a> </p>
 
-		</article>
+		</section>
 
-		<article>
+		<section>
 			<h2> À propos de moi </h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
-		</article>
+		</section>
 		
-		<article>
+		<section>
 			<h2> Loisirs </h2>
 			<ul id="loisir">
 				<li><i class="fas fa-plane"></i></li>
 				<li><i class="fas fa-skiing"></i></li>
 				<li><i class="fas fa-campground"></i></li>
 			</ul>
-		</article>
-		
+		</section>
+
 	</aside>
 
 	<div class="droite">
@@ -56,7 +56,7 @@
 		</header>
 
 
-		<section>
+		<section class="chapitre">
 			<h2 > <i class="fas fa-graduation-cap"></i>formation</h2>
 			
 			<table>
@@ -81,7 +81,7 @@
 			</table>
 		</section>
 
-		<section class="experience">
+		<section class="chapitre">
 			<h2><i class="fas fa-suitcase-rolling"></i> expérience professionelle</h2>
 		<ul>
 				<li> <i class="far fa-dot-circle"></i> 2000  <span class="description">Machin</span></li>
@@ -89,7 +89,7 @@
 			</ul>
 		</section>
 
-		<section class="recommandation">
+		<section class="chapitre">
 			<h2> <i class="fas fa-pencil-alt"></i> recommandation</h2>
 			<ul>
 				<li>2000 <span class="description">Machin</span></li>
