création de flex sur la partie de gauche pour que loisirs soit en bas

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body >
 
 <div id = "conteneur">
+
 	<aside class = "gauche">
 		<img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" class="imgId">
-		<section>
+	
+		<section class="contact">
 			<h2>Contact</h2>
 
 				<h3>Adresse</h3>
@@ -32,12 +34,12 @@
 
 		</section>
 
-		<section>
+		<section class="propos">
 			<h2> À propos de moi </h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
 		</section>
 		
-		<section>
+		<section class="loisirs">
 			<h2> Loisirs </h2>
 			<ul id="loisir">
 				<li><i class="fas fa-plane"></i></li>
@@ -45,8 +47,8 @@
 				<li><i class="fas fa-campground"></i></li>
 			</ul>
 		</section>
-
 	</aside>
+
 
 	<div class="droite">
 		
@@ -83,22 +85,50 @@
 
 		<section class="chapitre">
 			<h2><i class="fas fa-suitcase-rolling"></i> expérience professionelle</h2>
-		<ul>
-				<li> <i class="far fa-dot-circle"></i> 2000  <span class="description">Machin</span></li>
-				<li> <span class="point"> <i class="fas fa-circle"></i> </span> 1992 naissance </li>
-			</ul>
+
+			<table>
+				<tr>
+					<td class="td1"><i class="far fa-dot-circle"></i> 2013-2019</td>
+					<td class="td2">Chef de chantier </td>
+				</tr>		
+				<tr>
+					<td class="td3">Toulouse</td>
+					<td class="td4"><h3>Exemple de chantier réalisés : </h3>
+						<h4> La Socamil à Castelnaudary, base logistique : </h4>
+						<p>- gestion des sous-traitants
+						- gestion de stock
+						- câblage du courant faible (SSI, GTC)
+						- câblage armoire divisionnaire
+						- mise en service et dépannage du courant fort</p>
+
+						<h4> Réalisation d'immeubles de bureaux : </h4>
+						<p>- gestion des sous-traitants pour le courant fort
+						- câblages et programmation du contrôle d’accès, Orchestra
+						- câblages et programmation de l’anti intrusion, Harmonia
+						- installation d’alarme incendie type 4</p></td>
+				</tr>
+
+				<tr>
+					<td class="td1"><i class="fas fa-circle"></i>2011-2013</td>
+					<td class="td2">BTS Électrotechnique</td>
+				</tr>
+				<tr>
+					<td class="td5">Toulouse</td>
+					<td class="td4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, </td>
+				</tr>
+			</table>
 		</section>
 
 		<section class="chapitre">
 			<h2> <i class="fas fa-pencil-alt"></i> recommandation</h2>
 			<ul>
 				<li>2000 <span class="description">Machin</span></li>
-				<li>1992 naissance </li>
+				<li><p>L</li>
 			</ul>
 		</section>
 		
 	
-</div>
+	</div>
 </div>
 
 </body>
