contenus et mise en page de l'expérience

--- a/index.html
+++ b/index.html
@@ -110,11 +110,14 @@
 
 				<tr>
 					<td class="td1"><i class="fas fa-circle"></i>2011-2013</td>
-					<td class="td2">BTS Électrotechnique</td>
+					<td class="td2">BTS en alternance</td>
 				</tr>
 				<tr>
 					<td class="td5">Toulouse</td>
-					<td class="td4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, </td>
+					<td class="td4"> 
+						<h3>Chef d’équipe sur le chantier du palais de justice de FOIX :</h3>
+						<p>- suivis de banches et planchers - réalisation chemin de cable et tirage de cable - câblage TGBT et armoire divisionnaire - mise en service et dépannage de la GTC, contrôle d’accès et vidéo surveillance</p>
+					</td>
 				</tr>
 			</table>
 		</section>
