contenu de recommandation et recalibrage de margin padding général

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</header>
 
 
-		<section class="chapitre">
+		<section class="formation">
 			<h2 > <i class="fas fa-graduation-cap"></i>formation</h2>
 			
 			<table>
@@ -83,7 +83,7 @@
 			</table>
 		</section>
 
-		<section class="chapitre">
+		<section class="experience">
 			<h2><i class="fas fa-suitcase-rolling"></i> expérience professionelle</h2>
 
 			<table>
@@ -122,13 +122,29 @@
 			</table>
 		</section>
 
-		<section class="chapitre">
+		<section class="recommandation">
 			<h2> <i class="fas fa-pencil-alt"></i> recommandation</h2>
+			
+		<div id= "reco">
+			<div class="jean">
 			<ul>
-				<li>2000 <span class="description">Machin</span></li>
-				<li><p>L</li>
-			</ul>
-		</section>
+				<li>JEAN DE LA FONTAINE</li>
+				<li>Poète, Académie française</li>
+				<li>téléphone</li>
+				<li class="email">jean@email.com</li>
+			</ul>	
+			</div>
+
+			<div class="pierre">
+				<ul>
+					<li>PIERRE ROULE</li>
+					<li>Directeur, Montagne</li>
+					<li>téléphone</li>
+					<li class="email">pierre@email.com</li>
+				</ul>
+		</div>
+			
+	</section>
 		
 	
 	</div>
