rajout de lien  et modification css des liens

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 				<p>06.00.00.00.00 </p>
 
 				<h3>Email</h3>
-				<p><a href="mailto:riviere.simon@me.com">riviere.simon@me.com</a> </p>
+				<p><a href="mailto:riviere.simon@me.com" target="_blank">riviere.simon@me.com</a> </p>
 
 				<h3>Site Web</h3>
-				<p><a href="https://github.com/simonriviere">Github</a></p>
+				<p><a href="https://github.com/simonriviere" target="_blank">Github</a></p>
 
-				<p><a href="https://linkedin.com/in/simon-riviere-4825981a6">Linkedin</a> </p>
+				<p><a href="https://linkedin.com/in/simon-riviere-4825981a6" title =" il est vraiment bien !" target="_blank" >Linkedin</a> </p>
 
 		</section>
 
@@ -65,7 +65,7 @@
 				
 				<tr>
 					<td class="td1"><i class="far fa-dot-circle"></i> 2020 </td>
-					<td class="td2">Formation Openclassrooms : </td>
+					<td class="td2"><a href="https://openclassrooms.com/fr/paths/185-developpeur-web" title="Présentation de la formation"  target="_blank" >Formation Openclassrooms : </a> </td>
 				</tr>		
 				<tr>
 					<td class="td3">Mirepoix</td>
@@ -92,7 +92,7 @@
 					<td class="td2">Chef de chantier </td>
 				</tr>		
 				<tr>
-					<td class="td3">Engie - Toulouse </td>
+					<td class="td3"><a href="https://www.engie-solutions.com/fr?gclid=Cj0KCQjwzZj2BRDVARIsABs3l9LXkXPIWV6JFpLBOIqJ9Nz6qpk6uI06kk7j7RJeGZgSsUcOhKd28DkaAsikEALw_wcB"  target="_blank">Engie - Toulouse </a>  </td>
 					<td class="td4"><h3>Exemple de chantier réalisés : </h3>
 						<h4> La Socamil à Castelnaudary, base logistique : </h4>
 						<p>- gestion des sous-traitants
@@ -113,7 +113,7 @@
 					<td class="td2">BTS en alternance</td>
 				</tr>
 				<tr>
-					<td class="td5">Engie - Toulouse</td>
+					<td class="td5"><a href="https://www.engie-solutions.com/fr?gclid=Cj0KCQjwzZj2BRDVARIsABs3l9LXkXPIWV6JFpLBOIqJ9Nz6qpk6uI06kk7j7RJeGZgSsUcOhKd28DkaAsikEALw_wcB"  target="_blank">Engie - Toulouse </a>  </td>
 					<td class="td4"> 
 						<h3>Chef d’équipe sur le chantier du palais de justice de FOIX :</h3>
 						<p>- suivis de banches et planchers - réalisation chemin de cable et tirage de cable - câblage TGBT et armoire divisionnaire - mise en service et dépannage de la GTC, contrôle d’accès et vidéo surveillance</p>
