--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body >
-
+		<header id="titre">
+			
+			<div class="img"><img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" > </div>
+			<div class="ecrit">
+			<h1><span class="prenom"> simon </span> rivière </h1>
+			<h2><span class="devel"> Dével</span>oppeur web </h2></div>
+		</header>
 <div id = "conteneur">
 
 	<aside class = "gauche">
-		<img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" class="imgId">
 	
 		<section class="contact">
 			<h2>Contact</h2>
@@ -50,13 +55,9 @@
 	</aside>
 
 
-	<div class="droite">
-		
-		<header class="titre">
-			<h1><span class="prenom"> simon </span> rivière </h1>
-			<h2><span class="devel"> Dével</span>oppeur web </h2>
-		</header>
+	
 
+	<div class="droite">	
 
 		<section class="formation">
 			<h2 > <i class="fas fa-graduation-cap"></i>formation</h2>
@@ -145,8 +146,6 @@
 		</div>
 			
 	</section>
-		
-	
 	</div>
 </div>
 
