suppression de la partie responsive et remplacement par du media query sur la taille 480px

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 		<section class="contact">
 			<h2>Contact</h2>
-				
+
 				<h3>Adresse</h3>
 				<p>Mirepoix, France</p>
 
@@ -107,17 +107,17 @@
 					<h3>Chef de chantier</h3>
 					<h4>Exemple de chantier réalisés : </h4>
 					<h5> La Socamil à Castelnaudary, base logistique : </h5>
-					<p>- gestion des sous-traitants
+					<p> gestion des sous-traitants
 					- gestion de stock
 					- câblage du courant faible (SSI, GTC)
 					- câblage armoire divisionnaire
 					- mise en service et dépannage du courant fort</p>
 
 					<h5> Réalisation d'immeubles de bureaux : </h5>
-					<p>- gestion des sous-traitants pour le courant fort
+					<p> gestion des sous-traitants pour le courant fort
 					- câblages et programmation du contrôle d’accès, Orchestra
-					- câblages et programmation de l’anti intrusion, Harmonia
-					- installation d’alarme incendie type 4</p>
+					- câblages et programmation de l’anti-intrusion
+					- installation d’alarme incendie.</p>
 	
 					</article>
 			</div>
