modification font-size dans le max-480px

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				<article class="description">
 					<h3>BTS en alternance</h3>
 					<h4>Chef d’équipe sur le chantier du palais de justice de FOIX :</h4>
-					<p>- suivis de banches et planchers - réalisation chemin de cable et tirage de cable - câblage TGBT et armoire divisionnaire - mise en service et dépannage de la GTC, contrôle d’accès et vidéo surveillance</p>
+					<p>suivis de banches et planchers - réalisation chemin de cable et tirage de cable - câblage TGBT et armoire divisionnaire - mise en service et dépannage de la GTC, contrôle d’accès et vidéo surveillance.</p>
 					</article>
 			</div>
 
