remplacement du contenu de la partie formation et design des ul

--- a/index.html
+++ b/index.html
@@ -72,9 +72,14 @@
 
 				<article class="description">
 					<h3><a href="https://openclassrooms.com/fr/paths/185-developpeur-web" title="Présentation de la formation"  target="_blank" >Formation Openclassrooms : </a> </h3>
-								
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, 
-					</p>
+					<ul>			
+					<li>assembler les pages en HTML5 et CSS3 à partir de maquettes;</li>
+					<li>intégrer des contenus textes, images, sons, vidéo dans le code HTML5 ;</li>
+					<li>respecter les normes d’accessibilité et de référencement du W3C ;</li>
+					<li>assurer la compatibilité avec les différents navigateurs du marché ;</li>
+					<li>mettre en place une communication entre client et serveur avec JavaScript ;</li>
+					<li>organiser et gérer la base de données. 
+					</ul>
 				</article>
 			</div>
 
@@ -87,7 +92,8 @@
 				<article class="description">
 					<h3> BTS Électrotechnique :</h3>
 								
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, 
+					<p>Un technicien supérieur en électrotechnique peut concevoir, organiser, réaliser et assurer la conduite ou la maintenance d’installations électriques de production d’énergie, de biens ou encore de services.</p>
+					<p>J'ai réalisé mon BTS en alternance, ce qui m'a permis de faire mes premiers pas dans le monde du travail plus jeunes tout en continuant mes études.
 					</p>
 				</article>
 			</div>
