mise en place de liste à puces pour l'expérience

--- a/index.html
+++ b/index.html
@@ -113,18 +113,20 @@
 					<h3>Chef de chantier</h3>
 					<h4>Exemple de chantier réalisés : </h4>
 					<h5> La Socamil à Castelnaudary, base logistique : </h5>
-					<p> gestion des sous-traitants
-					- gestion de stock
-					- câblage du courant faible (SSI, GTC)
-					- câblage armoire divisionnaire
-					- mise en service et dépannage du courant fort</p>
+					<ul>
+						<li>gestion des sous-traitants</li>
+						<li>gestion de stock</li>
+						<li>câblage du courant faible (SSI, GTC)</li>
+						<li>câblage armoire divisionnaire</li>
+						<li>mise en service et dépannage du courant fort</li>
+					</ul>
 
 					<h5> Réalisation d'immeubles de bureaux : </h5>
-					<p> gestion des sous-traitants pour le courant fort
-					- câblages et programmation du contrôle d’accès, Orchestra
-					- câblages et programmation de l’anti-intrusion
-					- installation d’alarme incendie.</p>
-	
+					<ul>
+						<li>câblages et programmation du contrôle d’accès</li>
+						<li>câblages et programmation de l’anti-intrusion</li>
+						<li>installation d’alarme incendie</li>
+					</ul>
 					</article>
 			</div>
 
@@ -137,7 +139,12 @@
 				<article class="description">
 					<h3>BTS en alternance</h3>
 					<h4>Chef d’équipe sur le chantier du palais de justice de FOIX :</h4>
-					<p>suivis de banches et planchers - réalisation chemin de cable et tirage de cable - câblage TGBT et armoire divisionnaire - mise en service et dépannage de la GTC, contrôle d’accès et vidéo surveillance.</p>
+					<ul>
+						<li>suivis de banches et planchers</li> 
+						<li>réalisation chemin de cable et tirage de cable</li>
+						<li>câblage TGBT et armoire divisionnaire</li>
+						<li>mise en service et dépannage de la GTC</li> 
+					</ul>
 					</article>
 			</div>
 
