--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Simon RIVIERE</title>
     <link rel="stylesheet" href="style.css"/>
     <script src="https://kit.fontawesome.com/81fac7a661.js" crossorigin="anonymous"></script>
-<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=DM+Mono:ital,wght@1,300&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body >
@@ -43,7 +43,10 @@
 
 		<section class="propos">
 			<h2> À propos de moi </h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
+				<p>Électricien pendant plus de 8 ans, j’ai décidé de me réorienter vers un métier passion : le développement web.</p>
+				<p>C’est ainsi que j’ai commencé à faire des cours en autodidacte pour apprendre différents langages (HTML, Css, Javascript). Voyant que cela me plaisait de plus en plus, j’ai réalisé la formation Openclassrooms : développeur web. </p>
+				<p>Riche de nouvelles compétences je suis actuellement à la recherche de mission en free lance.</p> 
+</p>
 		</section>
 		
 		<section class="loisirs">
