modification des polices et du design général pour ressembler à la maquette

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id = "conteneur">
 
 	<aside class = "gauche">
-	
+
 		<section class="contact">
 			<h2>Contact</h2>
 
@@ -74,15 +74,17 @@
 				</aside>
 
 				<article class="description">
-					<h3><a href="https://openclassrooms.com/fr/paths/185-developpeur-web" title="Présentation de la formation"  target="_blank" >Formation Openclassrooms : </a> </h3>
-					<ul>			
-					<li>assembler les pages en HTML5 et CSS3 à partir de maquettes;</li>
-					<li>intégrer des contenus textes, images, sons, vidéo dans le code HTML5 ;</li>
-					<li>respecter les normes d’accessibilité et de référencement du W3C ;</li>
-					<li>assurer la compatibilité avec les différents navigateurs du marché ;</li>
-					<li>mettre en place une communication entre client et serveur avec JavaScript ;</li>
-					<li>organiser et gérer la base de données. 
-					</ul>
+
+					<h3><a href="https://openclassrooms.com/fr/paths/185-developpeur-web" title="Présentation de la formation"  target="_blank" >Openclassrooms </a> </h3>
+						<h4>Développeur web</h4>	
+						<p> Assembler les pages en HTML5 et CSS3 à partir de maquettes ;
+							Intégrer des contenus textes, images, sons, vidéo dans le code HTML5 ;
+							Respecter les normes d’accessibilité et de référencement du W3C ;
+							Assurer la compatibilité avec les différents navigateurs du marché ;
+							Mettre en place une communication entre client et serveur avec JavaScript ;
+							Organiser et gérer la base de données.
+						</p> 
+				
 				</article>
 			</div>
 
@@ -93,11 +95,10 @@
 				</aside>
 
 				<article class="description">
-					<h3> BTS Électrotechnique :</h3>
-								
-					<p>Un technicien supérieur en électrotechnique peut concevoir, organiser, réaliser et assurer la conduite ou la maintenance d’installations électriques de production d’énergie, de biens ou encore de services.</p>
-					<p>J'ai réalisé mon BTS en alternance, ce qui m'a permis de faire mes premiers pas dans le monde du travail plus jeunes tout en continuant mes études.
-					</p>
+					<h3> Lycée St Joseph </h3>
+						<h4>BTS électrotechnique</h4>	
+						<p>Un technicien supérieur en électrotechnique peut concevoir, organiser, réaliser et assurer la conduite ou la maintenance d’installations électriques de production d’énergie, de biens ou encore de services.</p>
+						<p>J'ai réalisé mon BTS en alternance, ce qui m'a permis de faire mes premiers pas dans le monde du travail plus jeunes tout en continuant mes études.</p>
 				</article>
 			</div>
 
@@ -109,46 +110,27 @@
 			<div class="liste">
 				<aside class="date">
 					<h3><i class="far fa-dot-circle"></i>  2013-2019 </h3>
-					<p><a href="https://www.engie-solutions.com/fr?gclid=Cj0KCQjwzZj2BRDVARIsABs3l9LXkXPIWV6JFpLBOIqJ9Nz6qpk6uI06kk7j7RJeGZgSsUcOhKd28DkaAsikEALw_wcB"  target="_blank"> Engie - Toulouse</a> </p>
+					<p>Toulouse</p>
 				</aside>
 
 				<article class="description">
-					<h3>Chef de chantier</h3>
-					<h4>Exemple de chantier réalisés : </h4>
-					<h5> La Socamil à Castelnaudary, base logistique : </h5>
-					<ul>
-						<li>gestion des sous-traitants</li>
-						<li>gestion de stock</li>
-						<li>câblage du courant faible (SSI, GTC)</li>
-						<li>câblage armoire divisionnaire</li>
-						<li>mise en service et dépannage du courant fort</li>
-					</ul>
-
-					<h5> Réalisation d'immeubles de bureaux : </h5>
-					<ul>
-						<li>câblages et programmation du contrôle d’accès</li>
-						<li>câblages et programmation de l’anti-intrusion</li>
-						<li>installation d’alarme incendie</li>
-					</ul>
-					</article>
+					<h3>ENGIE</h3>
+					<h4>Chef de chantier - Électricien</h4>
+					<p>En tant que chef de chantier, j'ai réalisé différentes taches : Gestion des sous-traitants ; Gestion de stock ; Câblage du courant faible (SSI, GTC) : Câblage armoire divisionnaire ; Mise en service et dépannage du courant fort ; Câblages et programmation du contrôle d’accès ; Câblage et programmation de l’anti-intrusion ; Installation d’alarme incendie. </p>
+				</article>
 			</div>
 
 			<div class="liste">
 				<aside class="date">
-					<h3><i class="fas fa-circle"></i>  2011-2013 </h3>
-					<p><a href="https://www.engie-solutions.com/fr?gclid=Cj0KCQjwzZj2BRDVARIsABs3l9LXkXPIWV6JFpLBOIqJ9Nz6qpk6uI06kk7j7RJeGZgSsUcOhKd28DkaAsikEALw_wcB"  target="_blank"> Engie - Toulouse</a> </p>
+					<h3><i class="fas fa-circle"></i>  2013-2019 </h3>
+					<p>Toulouse</p>
 				</aside>
 
 				<article class="description">
-					<h3>BTS en alternance</h3>
-					<h4>Chef d’équipe sur le chantier du palais de justice de FOIX :</h4>
-					<ul>
-						<li>suivis de banches et planchers</li> 
-						<li>réalisation chemin de cable et tirage de cable</li>
-						<li>câblage TGBT et armoire divisionnaire</li>
-						<li>mise en service et dépannage de la GTC</li> 
-					</ul>
-					</article>
+					<h3>ENGIE</h3>
+					<h4>Chef d'équipe - Électricien</h4>
+					<p>En tant que chef d'équipe, j'ai réalisé différentes taches : suivis de banches et planchers ; Réalisation chemin de cable et tirage de cable ; Câblage TGBT et armoire divisionnaire ; Mise en service et dépannage de la GTC.
+				</article>
 			</div>
 
 		</section>
