--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Simon RIVIERE</title>
     <link rel="stylesheet" href="style.css"/>
     <script src="https://kit.fontawesome.com/81fac7a661.js" crossorigin="anonymous"></script>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body >
@@ -14,8 +14,9 @@
 			
 			<div class="img"><img src="img/photoIdentité-3.jpg" alt="Photo de Simon rivière" > </div>
 			<div class="ecrit">
-			<h1><span class="prenom"> simon </span> rivière </h1>
-			<h2><span class="devel"> Dével</span>oppeur web </h2></div>
+				<h1><span class="prenom"> simon </span> rivière </h1>
+				<h2><span class="devel"> Dével</span>oppeur web </h2>
+			</div>
 		</header>
 
 	<div id = "conteneur">
@@ -62,18 +63,18 @@
 
 
 
-	<div class="droite"> <!--Possible de mettre une section plutot que div ? -->	
+	<div class="droite"> <!--un main plutot que div ? -->	
 
 		<section class="formation">
 			<h2 > <i class="fas fa-graduation-cap"></i>formation</h2>
 
-			<div class="liste"> 
-				<aside class="date"> <!--utiliser un article plutot qu'aside ?-->
-					<h3><i class="far fa-dot-circle"></i> 2020 </h3>
+			<div class="liste">  <!-- article -->
+				<aside class="date"> <!--balise pour date time //// modifier aside par div  -->
+					<h3><i class="far fa-dot-circle"></i> 2020 </h3> <!--remplacer h3 par time-->
 					<p>Mirepoix </p>
 				</aside>
 
-				<article class="description">
+				<article class="description"> <!--div-->
 
 					<h3><a href="https://openclassrooms.com/fr/paths/185-developpeur-web" title="Présentation de la formation"  target="_blank" >Openclassrooms </a> </h3>
 						<h4>Développeur web</h4>	
