suppression des times

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
 			<article class="liste"> 
 				<div class="date">
-					<time><i class="far fa-dot-circle"></i> 2020 </time> 
-					<p>Mirepoix </p>
+					<p><i class="far fa-dot-circle"></i>  2020  </p> 
+					<p class="ville">Mirepoix </p>
 				</div>
 
-				<div class="description"> <!--div-->
+				<div class="description">
 
 					<h4><a href="https://openclassrooms.com/fr/paths/185-developpeur-web" title="Présentation de la formation"  target="_blank" >Openclassrooms </a> </h4>
 						<h5>Développeur web</h5>	
@@ -91,8 +91,8 @@
 
 			<article class="liste">
 				<div class="date">
-					<time><i class="fas fa-circle"></i> 2011-2013 <time>
-					<p>Toulouse</p>
+					<p><i class="fas fa-circle"></i>  2011-2013 </p> 
+					<p class="ville">Toulouse</p>
 				</div>
 
 				<div class="description">
@@ -110,8 +110,8 @@
 
 			<article class="liste">
 				<div class="date">
-					<time><i class="far fa-dot-circle"></i>  2013-2019 </time>
-					<p>Toulouse</p>
+					<p><i class="far fa-dot-circle"></i>  2013-2019 </p> 					
+					<p class="ville">Toulouse</p>
 				</div>
 
 				<div class="description">
@@ -123,8 +123,8 @@
 
 			<article class="liste">
 				<div class="date">
-					<time><i class="fas fa-circle"></i>  2013-2019 </time>
-					<p>Toulouse</p>
+					<p><i class="fas fa-circle"></i>  2013-2015 </p> 
+					<p class="ville">Toulouse</p>
 				</div>
 
 				<div class="description">
