modification des font-size du header en 480px et des puces

--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
 			<h3 > <i class="fas fa-graduation-cap"></i>formation</h3>
 
 			<article class="liste"> 
-				<div class="date">
-					<p><i class="far fa-dot-circle"></i>  2020  </p> 
-					<p class="ville">Mirepoix </p>
+				<div class="puce">
+					<i class="far fa-dot-circle"></i>
+					<div class="date">
+						<p> 2020  </p> 
+						<p class="ville">Mirepoix </p>
+					</div>
 				</div>
 
 				<div class="description">
@@ -90,9 +93,13 @@
 			</article>
 
 			<article class="liste">
-				<div class="date">
-					<p><i class="fas fa-circle"></i>  2011-2013 </p> 
-					<p class="ville">Toulouse</p>
+
+				<div class="puce">
+					<i class="fas fa-circle"></i>
+					<div class="date">
+						<p>  2011-2013 </p> 
+						<p class="ville">Toulouse</p>
+					</div>	
 				</div>
 
 				<div class="description">
@@ -109,26 +116,32 @@
 			<h3><i class="fas fa-suitcase-rolling"></i> expérience professionelle</h3>
 
 			<article class="liste">
-				<div class="date">
-					<p><i class="far fa-dot-circle"></i>  2013-2019 </p> 					
-					<p class="ville">Toulouse</p>
+				<div class="puce">
+					<i class="far fa-dot-circle"></i>
+					<div class="date">
+						<p> 2013-2019 </p> 					
+						<p class="ville">Toulouse</p>
+					</div>
 				</div>
 
 				<div class="description">
-					<h4>ENGIE</h4>
+					<h4>ENGIE-Inéo</h4>
 					<h5>Chef de chantier - Électricien</h5>
 					<p>En tant que chef de chantier, j'ai réalisé différentes taches : Gestion des sous-traitants ; Gestion de stock ; Câblage du courant faible (SSI, GTC) : Câblage armoire divisionnaire ; Mise en service et dépannage du courant fort ; Câblages et programmation du contrôle d’accès ; Câblage et programmation de l’anti-intrusion ; Installation d’alarme incendie. </p>
 				</div>
+
 			</article>
 
 			<article class="liste">
+				<div class="puce"><i class="fas fa-circle"></i>
 				<div class="date">
-					<p><i class="fas fa-circle"></i>  2013-2015 </p> 
+					<p>  2013-2015 </p> 
 					<p class="ville">Toulouse</p>
+				</div>
 				</div>
 
 				<div class="description">
-					<h4>ENGIE</h4>
+					<h4>ENGIE-inéo</h4>
 					<h5>Chef d'équipe - Électricien</h5>
 					<p>En tant que chef d'équipe, j'ai réalisé différentes taches : suivis de banches et planchers ; Réalisation chemin de cable et tirage de cable ; Câblage TGBT et armoire divisionnaire ; Mise en service et dépannage de la GTC.
 				</div>
